--- a/app/templates/app/customer_pattern.html
+++ b/app/templates/app/customer_pattern.html
@@ -26,19 +26,19 @@
         </div>
         <div class="pickup-fields">
             <div>
-                <label for="{{ form.pickup_place.id_for_label }}">場所</label>
+                <label class="transport_labels" for="{{ form.pickup_place.id_for_label }}">場所</label>
                 {{ form.pickup_place }}
             </div>
             <div>
-                <label for="{{ form.pickup_staff.id_for_label }}">送迎スタッフ</label>
+                <label class="transport_labels" for="{{ form.pickup_staff.id_for_label }}">送迎スタッフ</label>
                 {{ form.pickup_staff }}
             </div>
             <div>
-                <label for="{{ form.pickup_time.id_for_label }}">時間</label>
+                <label class="transport_labels" for="{{ form.pickup_time.id_for_label }}">時間</label>
                 {{ form.pickup_time }}
             </div>
             <div>
-                <label for="{{ form.pickup_car.id_for_label }}">送迎車</label>
+                <label class="transport_labels" for="{{ form.pickup_car.id_for_label }}">送迎車</label>
                 {{ form.pickup_car }}
             </div>
         </div>
@@ -51,19 +51,19 @@
         </div>
         <div class="dropoff-fields">
             <div>
-                <label for="{{ form.dropoff_place.id_for_label }}">場所</label>
+                <label class="transport_labels" for="{{ form.dropoff_place.id_for_label }}">場所</label>
                 {{ form.dropoff_place }}
             </div>
             <div>
-                <label for="{{ form.dropoff_staff.id_for_label }}">送迎スタッフ</label>
+                <label class="transport_labels" for="{{ form.dropoff_staff.id_for_label }}">送迎スタッフ</label>
                 {{ form.dropoff_staff }}
             </div>
             <div>
-                <label for="{{ form.dropoff_time.id_for_label }}">時間</label>
+                <label class="transport_labels" for="{{ form.dropoff_time.id_for_label }}">時間</label>
                 {{ form.dropoff_time }}
             </div>
             <div>
-                <label for="{{ form.dropoff_car.id_for_label }}">送迎車</label>
+                <label class="transport_labels" for="{{ form.dropoff_car.id_for_label }}">送迎車</label>
                 {{ form.dropoff_car }}
             </div>
         </div>
