--- a/app/templates/app/staff_date_work.html
+++ b/app/templates/app/staff_date_work.html
@@ -97,6 +97,12 @@
     <button class="btn-sm" type="submit" name="action" value="save">保存</button>
     <button class="btn-sm" type="submit" name="action" value="pattern" formnovalidate>パターンを呼び出す</button>
     <button class="btn-sm" type="submit" name="action" value="cancel" formnovalidate>キャンセル</button>
+    <div class="ms-1 mt-1">
+        <label>
+            <input type="checkbox" name="pattern_change_is_checked" checked>
+            保存時にパターンも更新する
+        </label>
+    </div>
 </form>
 <script>
     setupToggleWorkStatusEventListener();
