--- a/app/templates/app/template_base.html
+++ b/app/templates/app/template_base.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
     <title>{% block title %}{% endblock %}</title>
+
+    <link rel="icon" href="{% static 'images/favicon.ico' %}">
    
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
