--- a/app/templates/app/customer_date_work.html
+++ b/app/templates/app/customer_date_work.html
@@ -16,7 +16,7 @@
 
     <p>日付: {{ work_date }}</p>
 
-    <p>通所/在宅/欠席:{{ form.work_status }}</p>
+    <p>通所/在宅/欠席 {{ form.work_status }}</p>
     
     <div class="work-fields morning-transport-fields">
         <div>
@@ -82,7 +82,7 @@
             {{ form.work1_place }}
             <label class="eat-lunch-at">
                 <input type="radio" name="eat_lunch_at" value="1" {% if form.instance.eat_lunch_at == 1 %}checked{% endif %}>
-                昼食をここで食べる
+                昼食をここで食べる(受け取る)
             </label>
             <button type=button class="remove-button btn-sm">削除</button>  
         </div>
@@ -99,7 +99,7 @@
             {{ form.work2_place }}
             <label class="eat-lunch-at">
                 <input type="radio" name="eat_lunch_at" value="2" {% if form.instance.eat_lunch_at == 2 %}checked{% endif %}>
-                昼食をここで食べる
+                昼食をここで食べる(受け取る)
             </label>
             <button type=button class="remove-button btn-sm">削除</button>
         </div>
@@ -116,7 +116,7 @@
             {{ form.work3_place }}
             <label class="eat-lunch-at">
                 <input type="radio" name="eat_lunch_at" value="3" {% if form.instance.eat_lunch_at == 3 %}checked{% endif %}>
-                昼食をここで食べる
+                昼食をここで食べる(受け取る)
             </label>
             <button type=button class="remove-button btn-sm">削除</button>
         </div>
@@ -132,7 +132,7 @@
             {{ form.work4_place }}
             <label class="eat-lunch-at">
                 <input type="radio" name="eat_lunch_at" value="4" {% if form.instance.eat_lunch_at == 4 %}checked{% endif %}>
-                昼食をここで食べる
+                昼食をここで食べる(受け取る)
             </label>
             <button type=button class="remove-button btn-sm">削除</button>
         </div>
@@ -144,7 +144,7 @@
     <button class="btn-sm" type="submit" name="action" value="cancel" formnovalidate>キャンセル</button>
     <div class="ms-1 mt-1">
         <label>
-            <input type="checkbox" name="pattern_change_is_checked" checked>
+            <input type="checkbox" name="change_pattern">
             保存時にパターンも更新する
         </label>
     </div>
