--- a/app/templates/app/customer_pattern.html
+++ b/app/templates/app/customer_pattern.html
@@ -100,7 +100,7 @@
             {{ form.work1_place }}
             <label class="eat-lunch-at">
                 <input type="radio" name="eat_lunch_at" value="1" {% if form.instance.eat_lunch_at == 1 %}checked{% endif %}>
-                昼食をここで食べる                
+                昼食をここで食べる(受け取る)                
             </label>
             <button type=button class="remove-button btn-sm">削除</button> 
         </div>
@@ -117,7 +117,7 @@
             {{ form.work2_place }}
             <label class="eat-lunch-at">
                 <input type="radio" name="eat_lunch_at" value="2" {% if form.instance.eat_lunch_at == 2 %}checked{% endif %}>
-                昼食をここで食べる
+                昼食をここで食べる(受け取る)
             </label>
             <button type=button class="remove-button btn-sm">削除</button>
         </div>
@@ -133,7 +133,7 @@
             {{ form.work3_place }}
             <label class="eat-lunch-at">
                 <input type="radio" name="eat_lunch_at" value="3" {% if form.instance.eat_lunch_at == 3 %}checked{% endif %}>
-                昼食をここで食べる
+                昼食をここで食べる(受け取る)
             </label>
             <button type=button class="remove-button btn-sm">削除</button>
         </div>
@@ -149,7 +149,7 @@
             {{ form.work4_place }}
             <label class="eat-lunch-at">
                 <input type="radio" name="eat_lunch_at" value="4" {% if form.instance.eat_lunch_at == 4 %}checked{% endif %}>
-                昼食をここで食べる
+                昼食をここで食べる(受け取る)
             </label>
             <button type=button class="remove-button btn-sm">削除</button>
         </div>
