--- a/app/templates/app/template_header.html
+++ b/app/templates/app/template_header.html
@@ -18,7 +18,7 @@
           <li class="nav-item">
             <a class="nav-link nav-link-custom" href="{% url 'staff' %}">スタッフ情報</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item"> -->
             <a class="nav-link nav-link-custom" href="{% url 'export' %}">データ出力</a>
           </li>
           <li class="nav-item">
