--- a/app/templates/app/place_remarks.html
+++ b/app/templates/app/place_remarks.html
@@ -8,7 +8,7 @@
 
 <h1>備考を設定する</h1>
 
-<form action="{% url 'save_place_remarks' place.id work_date %}" method="post">
+<form action="{% url 'place_remarks_save' place.id work_date %}" method="post">
     {% csrf_token %}
 
     <div class="mt-3 mb-3">
