--- a/app/templates/app/template_header.html
+++ b/app/templates/app/template_header.html
@@ -19,13 +19,12 @@
             <a class="nav-link nav-link-custom" href="{% url 'staff_list' %}">スタッフ情報</a>
           </li>
           <li class="nav-item">
-          <a class="nav-link nav-link-custom" href="{% url 'export' %}">データ出力</a>
+          <a class="nav-link nav-link-custom" href="{% url 'output' %}">データ出力</a>
           </li>
+          {% endif %}
           <li class="nav-item">
             <a class="nav-link nav-link-custom" href="{% url 'history' %}">操作履歴</a>
           </li>
-          {% endif %}
-
         </ul>
         <ul class="navbar-nav mr-auto mb-2 mb-md-0">
           <li class="nav-item dropdown">
