--- a/app/templates/app/info.html
+++ b/app/templates/app/info.html
@@ -35,7 +35,7 @@
         });
 
         // スタッフの「編集」ボタンが押されたときの処理
-        document.querySelectorAll("button[name='edit_staff']").forEach(button => {
+        document.querySelectorAll("button[name='staff_record_edit']").forEach(button => {
             button.addEventListener("click", function () {
                 sessionStorage.setItem("scrollToElement", this.id);  // ボタンのIDを保存
             });
@@ -130,9 +130,10 @@
                                 <div class="d-flex justify-content-between align-items-start">
                                     <div>
                                         <div>{{ customer.display | linebreaksbr }}</div>
+                                        <!-- 現在のステータスボタン -->
                                         <button type="button"
-                                            class="btn btn-sm mt-2 {{ customer.current_status_btn_class }}"
-                                            data-bs-toggle="modal" data-bs-target="#statusModal-{{ customer.id }}">
+                                            class="btn mt-2 {{ customer.current_status_btn_class }}"
+                                            data-bs-toggle="modal" data-bs-target="#statusModal-{{ member.id }}">
                                             {{ customer.current_status_text }}
                                         </button>
                                     </div>
@@ -206,7 +207,7 @@
     {% for info in info %}
     {% for staff, customer in info.staff_cusotmer_list %}
     {% if customer %}
-    {% include "app/partials/current_status_modal.html" with customer=customer %}
+    {% include "app/partials/current_status_modal.html" with member=customer %}
     {% endif %}
     {% endfor %}
     {% endfor %}
