スタッフにもステータス変更ボタンを設置

--- a/app/templates/app/partials/current_status_modal.html
+++ b/app/templates/app/partials/current_status_modal.html
@@ -13,7 +13,7 @@
         </div>
 
         <div class="modal-body">
-          {% for value, label in current_status_choices %}
+          {% for value, label in current_status_customer_choices %}
           <div class="form-check">
             <input
               class="form-check-input"
