--- a/app/templates/app/info.html
+++ b/app/templates/app/info.html
@@ -112,7 +112,19 @@
                             <td>
                                 {% if staff %}
                                 <div class="d-flex justify-content-between align-items-start">
-                                    <div>{{ staff.display | linebreaksbr }}</div>
+                                    <!-- 左側：スタッフ情報と現在のステータスボタン -->
+                                    <div>
+                                        <div class="mt-1">{{ staff.display | linebreaksbr }}</div>
+                                        <div class="mt-3">
+                                            <button type="button"
+                                                class="btn {{ staff.current_status_btn_class }}"
+                                                data-bs-toggle="modal" data-bs-target="#statusModal-{{ staff.id }}">
+                                                {{ staff.current_status_text }}
+                                            </button>
+                                        </div>
+                                    </div>
+                                    
+                                    <!-- 右側：編集ボタン -->
                                     {% if request.user.is_superuser %}
                                     <form method="post" action="{% url 'info_dispatch' work_date=work_date %}" style="display:inline;">
                                         {% csrf_token %}
@@ -122,22 +134,26 @@
                                         </button>
                                     </form>
                                     {% endif %}
-                                    </div>
+                                </div>
+
                                 {% endif %}
                             </td>
                             <td>
                                 {% if customer %}
                                 <div class="d-flex justify-content-between align-items-start">
+                                    <!-- 左側：利用者情報と現在のステータスボタン -->
                                     <div>
-                                        <div>{{ customer.display | linebreaksbr }}</div>
-                                        <!-- 現在のステータスボタン -->
-                                        <button type="button"
-                                            class="btn mt-2 {{ customer.current_status_btn_class }}"
-                                            data-bs-toggle="modal" data-bs-target="#statusModal-{{ member.id }}">
-                                            {{ customer.current_status_text }}
-                                        </button>
+                                        <div class="mt-1">{{ customer.display | linebreaksbr }}</div>
+                                        <div class="mt-3">
+                                            <button type="button"
+                                                class="btn mt-2 {{ customer.current_status_btn_class }}"
+                                                data-bs-toggle="modal" data-bs-target="#statusModal-{{ customer.id }}">
+                                                {{ customer.current_status_text }}
+                                            </button>
+                                        </div>
                                     </div>
 
+                                    <!-- 右側：編集ボタン -->
                                     {% if request.user.is_superuser %}
                                     <form method="post" action="{% url 'info_dispatch' work_date=work_date %}" style="display:inline;">
                                         {% csrf_token %}
@@ -154,7 +170,7 @@
                             <td rowspan="{{ rowspan }}">
                                 <div class="d-flex justify-content-between align-items-start">
                                     {{ info.remarks | linebreaksbr }}
-                                    {% if info.place_id != -1 %}
+                                    {% if info.place_id > 0 %}
                                     <form action="{% url 'info_dispatch' work_date=work_date %}" method="post">
                                         {% csrf_token %}
                                         <button id="edit_place_remarks_btn-{{ info.place_id }}" class="btn-sm text-nowrap"
@@ -206,8 +222,11 @@
 
     {% for info in info %}
     {% for staff, customer in info.staff_cusotmer_list %}
+    {% if staff %}
+    {% include "app/partials/current_status_modal.html" with member=staff current_status_choices=current_status_staff_choices%}
+    {% endif %}
     {% if customer %}
-    {% include "app/partials/current_status_modal.html" with member=customer %}
+    {% include "app/partials/current_status_modal.html" with member=customer current_status_choices=current_status_customer_choices%}
     {% endif %}
     {% endfor %}
     {% endfor %}
