--- a/app/templates/app/partials/current_status_modal.html
+++ b/app/templates/app/partials/current_status_modal.html
@@ -13,7 +13,7 @@
         </div>
 
         <div class="modal-body">
-          {% for value, label in current_status_customer_choices %}
+          {% for value, label in current_status_choices %}
           <div class="form-check">
             <input
               class="form-check-input"
@@ -36,7 +36,10 @@
             value="{{ member.id }}">
             変更
           </button>
-          <input type="hidden" name="work_date" value="{{ work_date }}">
+            <input type="hidden" name="member_id" value="{{ member.id }}">
+            <input type="hidden" name="place_id" value="{{ place_id }}">
+            <input type="hidden" name="member_type" value="{{ member_type }}">
+            <input type="hidden" name="work_date" value="{{ work_date }}">
         </div>
 
       </form>
