最低限の機能が完成した

--- a/app/templates/app/info.html
+++ b/app/templates/app/info.html
@@ -63,14 +63,14 @@
                         送迎情報
                     </button>
                 </li>
-                {% if request.user.is_superuser %}
+                <!-- {% if request.user.is_superuser %}
                 <li class="nav-item" role="presentation">
                     <button class="nav-link" id="log-tab" data-bs-toggle="tab" data-bs-target="#log-info"
                         type="button" role="tab">
                         操作履歴
                     </button>
                 </li>
-                {% endif %}
+                {% endif %} -->
             </ul>
             {% else %}
             <div>
@@ -225,9 +225,9 @@
                 </table>
             </div>
         </div>
-        <div class="tab-pane fade " id="log-info" role="tabpanel">
+        <!-- <div class="tab-pane fade " id="log-info" role="tabpanel">
             操作履歴
-        </div>
+        </div> -->
     </div>
 
     {% for info in info %}
