--- a/app/templates/app/template_header.html
+++ b/app/templates/app/template_header.html
@@ -22,9 +22,9 @@
           <a class="nav-link nav-link-custom" href="{% url 'output' %}">データ出力</a>
           </li>
           {% endif %}
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link nav-link-custom" href="{% url 'history' %}">操作履歴</a>
-          </li>
+          </li> -->
         </ul>
         <ul class="navbar-nav mr-auto mb-2 mb-md-0">
           <li class="nav-item dropdown">
