送迎の時間を備考に変更

--- a/app/templates/app/partials/transport_block.html
+++ b/app/templates/app/partials/transport_block.html
@@ -9,20 +9,20 @@
     <div class="{{ details_class }}">
         <div>
             <label class="transfer_label"
-                   for="{{ form.place.id_for_label }}">場所</label>
+                   for="{{ form.place.id_for_label }}">場所：</label>
             {{ form.place }}
         </div>
 
         <div>
             <label class="transfer_label"
-                   for="{{ form.staff.id_for_label }}">送迎スタッフ</label>
+                   for="{{ form.staff.id_for_label }}">送迎スタッフ：</label>
             {{ form.staff }}
         </div>
 
         <div>
             <label class="transfer_label"
-                   for="{{ form.time.id_for_label }}">時間</label>
-            {{ form.time }}
+                   for="{{ form.remarks.id_for_label }}">備考：</label>
+            {{ form.remarks }}
         </div>
     </div>
 </div>
