--- a/app/templates/app/info.html
+++ b/app/templates/app/info.html
@@ -63,14 +63,12 @@
                         送迎情報
                     </button>
                 </li>
-                <!-- {% if request.user.is_superuser %}
                 <li class="nav-item" role="presentation">
                     <button class="nav-link" id="log-tab" data-bs-toggle="tab" data-bs-target="#log-info"
                         type="button" role="tab">
                         操作履歴
                     </button>
                 </li>
-                {% endif %} -->
             </ul>
             {% else %}
             <div>
@@ -119,58 +117,57 @@
                         <tr>
                             <td>
                                 {% if staff %}
-                                <div class="d-flex justify-content-between align-items-start">
-                                    <!-- 左側：スタッフ情報と現在のステータスボタン -->
+                                <div class="d-flex justify-content-between">
+                                    <!-- 左側：スタッフ情報 -->
                                     <div>
                                         <div class="mt-1">{{ staff.display | linebreaksbr }}</div>
-                                        <div class="mt-3">
-                                            <button type="button"
-                                                class="btn {{ staff.current_status_btn_class }}"
-                                                data-bs-toggle="modal" data-bs-target="#statusModal-{{ staff.id }}">
-                                                {{ staff.current_status_text }}
-                                            </button>
-                                        </div>
                                     </div>
                                     
-                                    <!-- 右側：編集ボタン -->
-                                    {% if request.user.is_superuser %}
-                                    <form method="post" action="{% url 'info_dispatch' work_date=work_date %}" style="display:inline;">
-                                        {% csrf_token %}
-                                        <button id="edit-staff_btn-{{ staff.id }}" class="btn-sm text-nowrap"
-                                            type="submit" name="staff_record_edit" value="{{ staff.id }}">
-                                            編集
-                                        </button>
-                                    </form>
-                                    {% endif %}
+                                    <!-- 右側：ボタン -->
+                                    <div>
+                                        <form method="post" action="{% url 'info_dispatch' work_date=work_date %}">
+                                            {% csrf_token %}
+                                            <div class="d-flex gap-1 align-items-center">
+                                                <button type="button"
+                                                    class="btn btn-sm {{ staff.current_status_btn_class }}"
+                                                    data-bs-toggle="modal" data-bs-target="#statusModal-{{ staff.id }}">
+                                                    {{ staff.current_status_text }}
+                                                </button>                              
+                                                <button id="edit-staff_btn-{{ staff.id }}" class="btn-sm text-nowrap"
+                                                    type="submit" name="staff_record_edit" value="{{ staff.id }}">
+                                                    編集
+                                                </button>  
+                                            </div>                                      
+                                        </form>
+                                    </div>
                                 </div>
-
                                 {% endif %}
                             </td>
                             <td>
                                 {% if customer %}
                                 <div class="d-flex justify-content-between align-items-start">
-                                    <!-- 左側：利用者情報と現在のステータスボタン -->
+                                    <!-- 左側：利用者情報 -->
                                     <div>
-                                        <div class="mt-1">{{ customer.display | linebreaksbr }}</div>
-                                        <div class="mt-3">
-                                            <button type="button"
-                                                class="btn mt-2 {{ customer.current_status_btn_class }}"
-                                                data-bs-toggle="modal" data-bs-target="#statusModal-{{ customer.id }}">
-                                                {{ customer.current_status_text }}
-                                            </button>
-                                        </div>
+                                        <div>{{ customer.display | linebreaksbr }}</div>
                                     </div>
 
-                                    <!-- 右側：編集ボタン -->
-                                    {% if request.user.is_superuser %}
-                                    <form method="post" action="{% url 'info_dispatch' work_date=work_date %}" style="display:inline;">
-                                        {% csrf_token %}
-                                        <button id="edit-customer_btn-{{ customer.id }}" class="btn-sm text-nowrap"
-                                            type="submit" name="customer_record_edit" value="{{ customer.id }}">
-                                            編集
-                                        </button>
-                                    </form>
-                                    {% endif %}
+                                    <!-- 右側：ボタン -->
+                                    <div>
+                                        <form method="post" action="{% url 'info_dispatch' work_date=work_date %}">
+                                            {% csrf_token %}
+                                            <div class="d-flex gap-1 align-items-center">
+                                                <button type="button"
+                                                    class="btn btn-sm {{ customer.current_status_btn_class }}"
+                                                    data-bs-toggle="modal" data-bs-target="#statusModal-{{ customer.id }}">
+                                                    {{ customer.current_status_text }}
+                                                </button>                                            
+                                                <button id="edit-customer_btn-{{ customer.id }}" class="btn-sm text-nowrap"
+                                                    type="submit" name="customer_record_edit" value="{{ customer.id }}">
+                                                    編集
+                                                </button>
+                                            </div>
+                                        </form>
+                                    </div>
                                 </div>
                                 {% endif %}
                             </td>
@@ -225,9 +222,10 @@
                 </table>
             </div>
         </div>
-        <!-- <div class="tab-pane fade " id="log-info" role="tabpanel">
-            操作履歴
-        </div> -->
+         <!-- 操作履歴 -->
+        <div class="tab-pane fade " id="log-info" role="tabpanel">
+            開発中です。
+        </div>
     </div>
 
     {% for info in info %}
