--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,50 +2,31 @@ h1{
   font-size: 2rem;
 }
 
-input[type="button"],
-button,
-select {
-  background-color: transparent;
-  border: none;
+input[type="button"], button, select{
   cursor: pointer;
   outline: none;
-  padding: 0;
   appearance: none;
   color: #000;
   font-family: "ヒラギノ角ゴシック";
   font-size: 16px !important;
-  font-weight: unset !important;
+  font-weight: unset;
+  border-radius: 4px;
 }
 
-input[type="button"],
-button,
-select {
+
+input[type="button"], button {
   background: #efefef;
   border: 1px solid #333;
-  border-radius: 4px;
-  padding: 4px 8px !important;
-  line-height: 1.5rem !important;
-}
-
-/* disabled状態のスタイル */
-input[type="button"]:disabled,
-button:disabled,
-select:disabled {
-  background: #ccc; /* グレーの背景色 */
-  border: 1px solid #aaa; /* 灰色のボーダー */
-  color: #666; /* 灰色の文字色 */
-  cursor: not-allowed; /* 無効状態のカーソル */
-  opacity: 0.6; /* 少し透明にする (オプション) */
+  padding: 4px 8px;
+  line-height: 1.5rem;
 }
 
 select {
-  line-height: 2;
-  color: #333;
-  box-shadow: none;
-  padding: 0 24px 0 8px;
   background: #fff url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20width%3D%2220%22%20height%3D%2220%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M5%206l5%205%205-5%202%201-7%207-7-7%202-1z%22%20fill%3D%22%23555%22%2F%3E%3C%2Fsvg%3E) no-repeat right 5px top 55%;
+  border: 1px solid #333;
   background-size: 16px 16px;
-  cursor: pointer;
+  box-shadow: none;
+  padding: 4px 32px 4px 8px !important;
 }
 
 .nav-tabs>.nav-item>.nav-link {
